One week update

--- a/Css/Day-3/index.html
+++ b/Css/Day-3/index.html
@@ -15,6 +15,19 @@
     iusto eius nam saepe. Vero necessitatibus sit impedit maiores?</p>
 
     <img src="840344.jpg" alt="Image" width="50%">
+
+
+    <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione voluptates quos repudiandae molestias nostrum beatae illo consequuntur, quam distinctio eaque fuga enim at officiis,
+     libero sunt sint doloremque illum perspiciatis? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe commodi eius aperiam excepturi facere, cumque nihil fugiat modi, libero, ea qui reprehenderit. Laboriosam nobis reprehenderit soluta architecto esse perferendis dolores.
+     Odit officiis, ipsum est tempore nam similique omnis provident aliquid? Cumque voluptatum neque sit sint! Temporibus, neque ullam atque ex ad similique? Magni excepturi autem, delectus temporibus minima ratione atque.
+    </h4>
+
+    <ul type=square>
+        <li>Apple</li>
+        <li>Mango</li>
+        <li>Banana</li>
+        <li>Orange</li>
+    </ul>
    
 </body>
 </html>
