--- a/Css/Day-7/task.html
+++ b/Css/Day-7/task.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task</title>
+    <title>Assignment</title>
     <style>
         *{
             margin: 10;
@@ -12,37 +12,50 @@
         }
         body{  
           background-image: linear-gradient(to right ,black,#212529,black);
-          align-items: center;
-          padding: 0px 200px 0px;
+          /* padding: 10px 200px 0px; */
+
+        }
+        .div1 img{
+                        margin-top: 10px;
 
         }
         .div1{    
             height: 250px;
             width: 150px;
             border: 1px solid whitesmoke;
+            margin-top: 10px;
             text-align: center;
+            border-radius: 20px;
+            margin: 20px auto;
         }
         .div1:hover{
-            background-image: linear-gradient(to right ,#212529,#000000,#10120f);
+            background-image: linear-gradient(to left ,#212529,#000000,#10120f);
              }
         h4{
             padding: 0;
             color: white;
+            margin-top: 10px;
         }
         p{
            font-size:10px;
            color: white;
            padding: 0px;
+           margin-top: 10px;
         }
         button{
             color: white;
             background-color: #000000;
+            border: none;
+            border-radius: 30px;
+            margin-top: 10px;
         }
         button:hover{
-            color: rgb(173, 149, 149);
+            color: black;
+            background-color:white;
+            cursor: pointer;
 
         }
-       
+       /* Margin is the best way to make it center */
     </style>
 </head>
 <body>
